Fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-	min-height: 100vh;
-	min-width: 100vw;
-	font-family: sans-serif;
+    min-height: 100vh;
+    max-width: 100vw;
+    font-family: sans-serif;
 }
 
 main {
-	background-color: rgba(0, 0, 0, 0.7);
-	display: flex;
-	gap: 1rem;
-	flex-wrap: wrap;
-	justify-content: center;
-	min-height: 100vh;
-	width: 100%;
-	padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 100vh;
+    width: 100%;
+    padding: 1rem;
 }
 
 .container {
-	position: relative;
-	border-radius: 20px;
-	background: linear-gradient(
-		210deg,
-		rgba(224, 224, 224, 0.3) 0,
-		rgba(36, 34, 34, 0.1) 70%
-	);
-	box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-		-5px -5px 30px 7px rgba(0, 0, 0, 0.22), 3px 3px 10px rgba(0, 0, 0, 0.25);
-	display: inline-block;
+    position: relative;
+    border-radius: 20px;
+    background: linear-gradient(
+        210deg,
+        rgba(224, 224, 224, 0.3) 0,
+        rgba(36, 34, 34, 0.1) 70%
+    );
+    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+        -5px -5px 30px 7px rgba(0, 0, 0, 0.22), 3px 3px 10px rgba(0, 0, 0, 0.25);
+    display: inline-block;
 }
 
 /* ==========================================================================
@@ -39,89 +39,89 @@ main {
    ========================================================================== */
 
 .input_container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	flex: 1 1 400px;
-	padding: 2rem 1rem;
-	color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex: 1 1 400px;
+    padding: 2rem 1rem;
+    color: white;
 }
 
 .input_container h1 {
-	text-align: center;
-	padding: 1rem 0;
+    text-align: center;
+    padding: 1rem 0;
 }
 
 .input_container ul {
-	list-style: none;
+    list-style: none;
 }
 
 .input_container ul li {
-	padding: 1rem 0rem;
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
+    padding: 0.7rem 0rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 
 .input_container input[type="text"] {
-	background-color: rgba(100, 100, 100, 0.1);
-	outline: none;
-	padding: 0.5rem 2rem;
-	box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, 0.25),
-		-1px -1px 6px 2px rgba(0, 0, 0, 0.22);
-	transition: 0.4s;
-	color: white;
-	border: 2px solid rgba(0, 0, 0, 0);
+    background-color: rgba(100, 100, 100, 0.1);
+    outline: none;
+    padding: 0.5rem 2rem;
+    box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, 0.25),
+        -1px -1px 6px 2px rgba(0, 0, 0, 0.22);
+    transition: 0.4s;
+    color: white;
+    border: 2px solid rgba(0, 0, 0, 0);
 }
 
 .input_container input[type="text"]:focus {
-	border: 2px solid rgb(100, 100, 100);
+    border: 2px solid rgb(100, 100, 100);
 }
 
 .input_container .slider_info {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .input_container input[type="text"]::placeholder {
-	color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .input_container button {
-	align-self: center;
-	background-color: rgba(0, 0, 0, 0);
-	outline: none;
-	border: none;
-	padding: 0.5rem 2rem;
-	border-radius: 10px;
-	text-align: center;
-	text-transform: uppercase;
-	box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, 0.25),
-		-1px -1px 6px 2px rgba(0, 0, 0, 0.22);
-	cursor: pointer;
-	transition: 0.4s;
-	color: white;
-	transform: scale(1.1, 1.1);
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0);
+    outline: none;
+    border: none;
+    padding: 0.5rem 2rem;
+    border-radius: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, 0.25),
+        -1px -1px 6px 2px rgba(0, 0, 0, 0.22);
+    cursor: pointer;
+    transition: 0.4s;
+    color: white;
+    transform: scale(1.1, 1.1);
 }
 
 .input_container button:active {
-	transform: scale(1, 1);
-	box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.25),
-		-1px -1px 6px 3px rgba(0, 0, 0, 0.22);
+    transform: scale(1, 1);
+    box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.25),
+        -1px -1px 6px 3px rgba(0, 0, 0, 0.22);
 }
 
 .input_container .note {
-	background-color: rgba(0, 0, 0, 0.4);
-	border-radius: 20px;
-	padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+    padding: 1rem;
 }
 
 .input_container .note h2 {
-	padding: 1rem 0.5rem;
+    padding: 0.5rem;
 }
 
 .input_container .note li {
-	padding: 0.5rem;
+    padding: 0.1rem 0.5rem;
 }
 
 /* ==========================================================================
@@ -129,18 +129,19 @@ main {
    ========================================================================== */
 
 .bubble_container {
-	flex: 5 1 400px;
-	min-height: 90vh;
+    flex: 5 1 400px;
+    min-height: 90vh;
 }
 
 .bubble {
-	background-position: center;
-	border-radius: 50%;
-	display: inline-block;
-	opacity: 0.7;
-	position: absolute;
+    background-position: center;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.7;
+    position: absolute;
 }
 
 .bubble img {
-	height: 100%;
+    position: absolute;
+    height: 100%;
 }
